# elis-space

./: .gitignore  .replit  CLAUDE.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  vite.config.js
.claude/: settings.local.json
backend/: auth.py  check_db.py  database.py  delete_and_reset_db.py  eli_ai.py  main.py  requirements.txt  reset_database.py  seed_data.py  test_new_sentiment.py  test_sentiment.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: NotificationModal.jsx  SafeModeButton.css  SafeModeButton.jsx  SafeModeLockScreen.css  SafeModeLockScreen.jsx  ScrollingNavbar.css  ScrollingNavbar.jsx
frontend/src/config/: axios.js
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Home.jsx  Login.jsx  Settings.jsx  Signup.jsx
frontend/src/styles/: Auth.css  Chat.css  Dashboard.css  Home.css  NotificationModal.css  Settings.css
frontend/src/utils/: notifications.js
