[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.2",
    "openai>=2.2.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "textblob>=0.19.0",
    "uvicorn>=0.37.0",
]
